[gd_scene load_steps=5 format=2]

[ext_resource path="res://lvl_1/lvl_1_ui.gd" type="Script" id=1]
[ext_resource path="res://lvl_0/scene_assets/ui_blue/ui_blue_theme.tres" type="Theme" id=2]
[ext_resource path="res://lvl_0/scene_assets/ui_green/ui_green_theme.tres" type="Theme" id=3]
[ext_resource path="res://lvl_0/scene_assets/notbook_icon.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
anchor_left = 0.359
anchor_top = 0.022
anchor_right = 0.646
anchor_bottom = 0.058
margin_left = 0.383972
margin_top = -0.200001
margin_right = 0.495972
margin_bottom = 0.199997
text = "Level One: Sending and Receiving Information"

[node name="prompt_panel" type="Panel" parent="."]
anchor_left = 0.27
anchor_top = 0.85
anchor_right = 0.755
anchor_bottom = 1.0
margin_left = -0.480011
margin_right = -0.120056

[node name="prompt_text" type="RichTextLabel" parent="prompt_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = -8.0

[node name="next_btn" type="Button" parent="prompt_panel"]
anchor_left = 0.877
anchor_top = 0.7
anchor_right = 0.97
anchor_bottom = 0.922
margin_left = 0.130981
margin_right = -0.0900269
margin_bottom = 0.0199966
text = "Next"

[node name="select_panel" type="Panel" parent="."]
visible = false
anchor_left = 0.318
anchor_top = 0.337
anchor_right = 0.683
anchor_bottom = 0.483
margin_left = 0.367981
margin_top = -0.200012
margin_right = -0.392029
margin_bottom = 0.199982

[node name="select_label" type="Label" parent="select_panel"]
anchor_right = 1.0
anchor_bottom = 0.375
margin_bottom = -6.0
text = "Select Your Colors!"
align = 1
valign = 1

[node name="blue_button" type="Button" parent="select_panel"]
anchor_left = 0.271
anchor_top = 0.284
anchor_right = 0.413
anchor_bottom = 0.864
margin_left = -0.0830078
margin_top = 0.00799942
margin_right = -0.0490112
margin_bottom = -0.0320053
theme = ExtResource( 2 )

[node name="green_button" type="Button" parent="select_panel"]
anchor_left = 0.571
anchor_top = 0.284
anchor_right = 0.713
anchor_bottom = 0.864
margin_left = 0.016983
margin_top = 0.00799942
margin_right = 0.0509644
margin_bottom = -0.0320053
theme = ExtResource( 3 )

[node name="select_number" type="Label" parent="select_panel"]
anchor_left = 0.807
anchor_top = 0.386
anchor_right = 0.898
anchor_bottom = 0.761
margin_left = -0.0110168
margin_top = 0.0319977
margin_right = 0.04599
margin_bottom = 0.0319977
text = "0"
align = 1
valign = 1

[node name="keep_reject" type="Panel" parent="."]
visible = false
anchor_left = 0.318
anchor_top = 0.337
anchor_right = 0.683
anchor_bottom = 0.483
margin_left = 0.367981
margin_top = -0.200012
margin_right = -0.392029
margin_bottom = 0.199982

[node name="Sprite" type="Sprite" parent="keep_reject"]

[node name="notebook_btn" type="Button" parent="."]
anchor_left = 0.012
anchor_top = 0.925
anchor_right = 0.045
anchor_bottom = 0.982
margin_left = -0.288
margin_top = -6.10352e-05
margin_right = -0.0800018
margin_bottom = -0.200012

[node name="notebook_icon" type="Sprite" parent="notebook_btn"]
position = Vector2( 17, 17.0001 )
scale = Vector2( 0.216667, 0.266667 )
texture = ExtResource( 4 )

[node name="notebook_panel" type="Panel" parent="."]
anchor_left = 0.015
anchor_top = 0.195
anchor_right = 0.255
anchor_bottom = 0.815
margin_left = -0.360001
margin_right = -0.120026
margin_bottom = -3.05176e-05

[node name="notebook_text" type="RichTextLabel" parent="notebook_panel"]
anchor_left = 0.024
anchor_top = 0.016
anchor_right = 0.972
anchor_bottom = 0.978
margin_left = 0.0959997
margin_top = 0.0479999
margin_right = -0.112015
margin_bottom = 0.18399

[connection signal="pressed" from="prompt_panel/next_btn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="select_panel/blue_button" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="select_panel/green_button" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="notebook_btn" to="." method="_on_notebook_btn_pressed"]
